gitops/platform/authentik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`authentik.__ZONE_NAME__`)
      middlewares:
        - name: authentik-cors
      services:
        - kind: Service
          name: authentik-server
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-netbird
  namespace: authentik
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`authentik.__ZONE_NAME__`)
      middlewares:
        - name: authentik-netbird-forwarded-headers
        - name: authentik-cors
      services:
        - kind: Service
          name: authentik-server
          port: 80
